edicion img ruta

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,8 +19,7 @@ body{
 .icono{
     height: 15px;
     align-content: center;
-    text-align: center;
-    
+    text-align: right;
     color: ivory;
 }
 .iconors{
